k8s/maya-be-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maya-be
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: maya-be
  template:
    metadata:
      labels:
        app: maya-be
    spec:
      containers:
      - name: maya-backend
        image: farhanraju/maya-backend:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m" 
        ports:
        - containerPort: 4000
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30  
          periodSeconds: 20
