k8s/maya-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: maya-db
spec:
  selector:
    app: maya-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
