k8s/maya-be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maya-be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.maya.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maya-be-service
            port:
              number: 4000
